--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -19,9 +19,10 @@
     <%= f.label :description %><br />
     <%= f.text_field :description %>
   </div>
+
   <div class="field">
     <%= f.label :department_id %><br />
-    <%= f.number_field :department_id %>
+    <%= f.collection_select(:department_id, Department.all, :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit %>
