--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -14,7 +14,7 @@
   <tr>
     <td><%= team.name %></td>
     <td><%= team.description %></td>
-    <td><%= team.department_id %></td>
+    <td><%= team.department.name %></td>
     <td><%= link_to 'Show', team %></td>
     <td><%= link_to 'Edit', edit_team_path(team) %></td>
     <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
