Display username as name.#

--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>Name</th>
     <th>Bio</th>
-    <th>Username</th>
+    <th>OSU name.#</th>
     <th>Team</th>
     <th>Github username</th>
     <th>Twitter username</th>
