--- a/app/views/developers/_form.html.erb
+++ b/app/views/developers/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.text_field :bio %>
   </div>
   <div class="field">
-    <%= f.label :username %><br />
+    <%= f.label :username, "OSU name.#" %><br />
     <%= f.text_field :username %>
   </div>
   <div class="field">
