--- a/app/views/developers/_form.html.erb
+++ b/app/views/developers/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :team_id %><br />
-    <%= f.number_field :team_id %>
+    <%= f.collection_select(:team_id, Team.all, :id, :name) %>
   </div>
   <div class="field">
     <%= f.label :github_username %><br />
