Teams show link to all their developers

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -15,6 +15,13 @@
   <%= link_to @team.department.name, @team.department %>
 </p>
 
+<h2>Developers on Team</h2>
+<ul>
+  <% @team.developers.each do |developer| %>
+    <li><%= link_to developer.name, developer %></li>
+  <% end %>
+</ul>
+
 
 <%= link_to 'Edit', edit_team_path(@team) %> |
 <%= link_to 'Back', teams_path %>
