--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -5,6 +5,7 @@
     <th>Name</th>
     <th>Description</th>
     <th>Number of Teams</th>
+    <th>Number of Developers</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,6 +16,7 @@
     <td><%= department.name %></td>
     <td><%= department.description %></td>
     <td><%= department.teams.count %></td>
+    <td><%= department.developers_within_department %></td>
     <td><%= link_to 'Show', department %></td>
     <td><%= link_to 'Edit', edit_department_path(department) %></td>
     <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
