rails g migration add_applications_technologies_table
Add has-and-belongs-to-many relationship between technology and apps.
Add checkboxes to form so that you can add relationships

--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -23,6 +23,16 @@
     <%= f.label :team_id %><br />
     <%= f.collection_select(:team_id, Team.all, :id, :name) %>
   </div>
+
+
+  <%= hidden_field_tag "application[technology_ids][]", nil%>
+    <% Technology.all.each do |technology| %>
+        <label class="checkbox">
+          <%= check_box_tag "application[technology_ids][]", technology.id, @application.technology_ids.include?(technology.id), id: dom_id(technology) %>
+          <%= technology.name %>
+        </label>
+    <% end %>
+
   <div class="field">
     <%= f.label :status %><br />
     <%= f.text_field :status %>
