--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -20,6 +20,13 @@
   <%= @application.status %>
 </p>
 
+<h2>Technologies</h2>
+<ul>
+  <% @application.technologies.each do |technology| %>
+    <li><%= link_to technology.name, technology %></li>
+  <% end %>
+</ul>
+
 
 <%= link_to 'Edit', edit_application_path(@application) %> |
 <%= link_to 'Back', applications_path %>
