--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<% unless @developer.username == "" %>
+  <img src="https://opic.osu.edu/<%= @developer.username %>"/>
+<% end %>
 <p>
   <b>Name:</b>
   <%= @developer.name %>
