--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,26 +1,15 @@
-<h1>Listing teams</h1>
+<h1><%= link_to @department.name, @department %></h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Department</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @teams.each do |team| %>
-  <tr>
-    <td><%= team.name %></td>
-    <td><%= team.description %></td>
-    <td><%= link_to team.department.name, team.department %></td>
-    <td><%= link_to 'Show', team %></td>
-    <td><%= link_to 'Edit', edit_team_path(team) %></td>
-    <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+<ul>
+    <% @teams.each do |team| %>
+        <li><%= link_to team.name, team %> - <%= team.description %></li>
+        <ul>
+            <% team.developers.each do |developer| %>
+                <li><%= link_to developer.name, developer %></li>
+            <% end %>
+        </ul>
+    <% end %>
+</ul>
 
 <br />
 
