--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div class="field">
     <%= f.label :department_id %><br />
-    <%= f.collection_select(:department_id, Department.all, :id, :name) %>
+    <%= f.collection_select(:department_id, Department.find(:all, :order => :name), :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit %>
