--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -13,7 +13,7 @@
 <h2>Developers on Team</h2>
 <ul>
     <% @team.developers.each do |developer| %>
-        <li><%= link_to developer.name, developer %></li>
+        <li><%= link_to 'Dev: ' + developer.name, developer %></li>
     <% end %>
 </ul>
 <%= link_to 'New Developer', new_developer_path %>
