--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
 </div>
 
 <div class="container">
-
+    <a href="https://github.com/peterdietz/osudevelopers"><img style="position: absolute; top: 0; left: 0; border: 0; z-index:9999" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <%= yield %>
 
 </div> <!-- /container -->
