Skip displaying if its a fork
We want real developers!

--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -33,7 +33,8 @@
   <% unless @githubRepos.empty? %>
     <ul>
     <% @githubRepos.each do |repo| %>
-        <li><%= link_to repo["full_name"], repo["html_url"] %> - Language: <%= repo["language"] %> - Forks: <%= repo["forks"] %> - Watchers: <%= repo["watchers"] %>
+        <% next if repo["fork"] %>
+        <li><%= link_to repo["full_name"], repo["html_url"] %> - <%= repo["description"] %> - Language: <%= repo["language"] %> - Forks: <%= repo["forks"] %> - Watchers: <%= repo["watchers"] %>
 
     <% end %>
     </ul>
