Make developer name really big.

--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -3,10 +3,7 @@
 <% unless @developer.username == "" %>
   <img src="https://opic.osu.edu/<%= @developer.username %>"/>
 <% end %>
-<p>
-  <b>Name:</b>
-  <%= @developer.name %>
-</p>
+<h1><%= @developer.name %></h1>
 
 <p>
   <b>Bio:</b>
