Build OPIC URL through model, instead of view constructing URL

--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <% unless @developer.username == "" %>
-  <img src="https://opic.osu.edu/<%= @developer.username %>"/>
+  <img src="<%= @developer.opicURL%>"/>
 <% end %>
 <h1><%= @developer.name %></h1>
 
